crates/obzenflow_runtime/tests/compile_fail/effects_emit_outside_output.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/effects_emit_outside_output.rs:20:13
   |
20 |     fx.emit(Undeclared).await.unwrap();
   |        ---- ^^^^^^^^^^ expected `Declared`, found `Undeclared`
   |        |
   |        arguments to this method are incorrect
   |
help: the return type of this call is `Undeclared` due to the type of the argument passed
  --> tests/compile_fail/effects_emit_outside_output.rs:20:5
   |
20 |     fx.emit(Undeclared).await.unwrap();
   |     ^^^^^^^^----------^
   |             |
   |             this argument influences the return type of `emit`
note: method defined here
  --> src/effects/typed.rs
   |
   |     pub async fn emit<T, At>(&mut self, fact: T) -> Result<(), EffectError>
   |                  ^^^^
